# axum_jsonapi

./: Cargo.toml  README.md
src/: json_api.rs  main.rs  routes.rs
