[package]
name = "axum-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "*"
simple_logger = "*"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rustls = "0.23"
